# CHANGELOG
# ---
# * Handle Errno::ECONNRESET when posting data [cody]
#
# * Fix broken USA ePay URL [cody]
#
# * Update RequiresParameters to support HashWithIndifferentAccess [cody]
#
# * Add support for SecurePayTech payment gateway [Jasper Bryant-Greene]
#
# * Detect when test credentials are being used with PayJunction [cody]
#
# * Update documentation about TrustCommerce void [cody]
#
# * Add void to TrustCommerce [jesse.c.scott]
#
# * Add support for echecks to the BrainTree gateway [Jeremy Voorhis]
#
# * Fix before_validate and validate methods in CreditCard [rick.denatale]
#
# * Add support for Netbilling payment gateway [cody]
#
# * Pass in N/A for unknown states when a country is present in PaypalGateway [cody]
#
# * Strip non alpha chars from order_id in Payflow gateway, as Paymentech Tampa can't handle them [cody]
#
# * Add support for the PaySecure payment gateway [cody]
#
# * Add support for descriptions in Authorize.net credits [shiva.kaul]
#
# * Great cleanup and improvement of CreditCard code, tests, and docs [James Herdman]
#
# * Fix remote PayPal tests [cody]
#
# * Update Linkpoint tests to remove useless pem file [cody]
#
# * Use symbols for CreditCard error messages, since errors have indifferent access [cody]
#
# * Improve CreditCard error messages [George Ogata]
#
# * Change deny to assert_false, and deny_success to assert_failure.  Remove Gateway.gateway, as it is available from Base [cody]
#
# * Improve documentation, and test coverage [James Herdman]
#
# * Refactor MonerisGateway, improve test coverage and documentation [James Herdman]
#
# * Add support for crediting to Moneris [James Herdman]
#
# * Send state N/A in Payflow when the state is blank.  Fixes UK PayPal Express payments when not providing a state [cody]
#