@@ -17,11 +17,16 @@ module ActiveMerchant #:nodoc:
       def test?
         @test
       end
+      
+      def fraud_review?
+        @fraud_review
+      end
         
       def initialize(success, message, params = {}, options = {})
         @success, @message, @params = success, message, params.stringify_keys
         @test = options[:test] || false        
-        @authorization = options[:authorization]        
+        @authorization = options[:authorization]
+        @fraud_review = options[:fraud_review]
       end
     end
   end
